[package]
name = "paragon"
version = "0.1.0"
authors = ["thane98"]
edition = "2018"

[lib]
name = "paragon"
crate-type = ["rlib", "cdylib"]

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
anyhow = "1.0"
linked-hash-map = "0.5.3"
mila = { git = "https://github.com/thane98/mila", rev = "975764e" }
exalt = { git = "https://github.com/thane98/exalt-rs", rev = "5620a09" }